@@ -1,42 +1,91 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
-	id("org.springframework.boot") version "2.7.14"
-	id("io.spring.dependency-management") version "1.0.15.RELEASE"
-	kotlin("jvm") version "1.6.21"
-	kotlin("plugin.spring") version "1.6.21"
-	kotlin("plugin.jpa") version "1.6.21"
+	kotlin("jvm") version PluginVersions.JVM
 }
 
-group = "team.ampersand"
-version = "0.0.1-SNAPSHOT"
+subprojects {
+	apply {
+		plugin("org.jetbrains.kotlin.jvm")
+		version = PluginVersions.JVM
+	}
 
-java {
-	sourceCompatibility = JavaVersion.VERSION_11
-}
+	apply {
+		plugin("org.jetbrains.kotlin.kapt")
+		version = PluginVersions.KAPT
+	}
 
-repositories {
-	mavenCentral()
-}
+	dependencies {
+		implementation(Dependencies.KOTLIN_REFLECT)
+		implementation(Dependencies.KOTLIN_STDLIB)
 
-dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-	implementation("org.springframework.boot:spring-boot-starter-security")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	runtimeOnly("com.mysql:mysql-connector-j")
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testImplementation("org.springframework.security:spring-security-test")
-}
-
-tasks.withType<KotlinCompile> {
-	kotlinOptions {
-		freeCompilerArgs += "-Xjsr305=strict"
-		jvmTarget = "11"
+		testImplementation(Dependencies.SPRING_TEST)
+		testImplementation(Dependencies.MOCKITO_KOTLIN)
 	}
 }
 
-tasks.withType<Test> {
-	useJUnitPlatform()
+allprojects {
+	group = "team.ampersand"
+	version = "0.0.1-SNAPSHOT"
+
+	tasks {
+		compileKotlin {
+			kotlinOptions {
+				freeCompilerArgs = listOf("-Xjsr305=strict")
+				jvmTarget = "17"
+			}
+		}
+
+		compileJava {
+			sourceCompatibility = JavaVersion.VERSION_17.majorVersion
+		}
+
+		test {
+			useJUnitPlatform()
+		}
+	}
+
+	repositories {
+		mavenCentral()
+	}
+}
+
+val ktlint: Configuration by configurations.creating
+
+dependencies {
+	ktlint(Dependencies.KTLINT) {
+		attributes {
+			attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+		}
+	}
+}
+
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+
+	description = "Check Kotlin code style."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("**/*.kt", "**/*.kts")
+}
+
+// Formatting all source files
+val ktlintFormat by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+
+	description = "Fix Kotlin code style deviations."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("-F", "**/*.kt")
+	jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+	kotlinOptions {
+		freeCompilerArgs = listOf("-Xjsr305=strict")
+		jvmTarget = "17"
+	}
 }
